--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Font Awesome Library CDN Connection -->
     <script src="https://use.fontawesome.com/9a77ea3aef.js"></script>
 
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="./style.css">
 
     <link href="https://fonts.googleapis.com/css?family=Aclonica|Vidaloka&display=swap" rel="stylesheet">
 
@@ -56,7 +56,7 @@
 
     </div>
     </div>
-    <script>"js\signin.js"</script>
+    <script>"index.js"</script>
 </body>
 
 
