--- a/index.html
+++ b/index.html
@@ -21,42 +21,8 @@
 </head>
 
 <body>
-    <!-- top-banner and left-side-nav will be stationary on every page to keep uniformity -->
-    <div class="top-banner">
-        <h1>Envisioning Your Future</h1>
-    </div>
-
-    <div class="main-section">
-
-    <div class="left-side-nav">
-        <a href="html\about-us.html">About Us</a>
-    </div>
-
-    <div class="right-side-content">
-        <div class="username">
-            <input type="text" placeholder="Enter your email address" autofocus id="email">
-        </div>
-
-        <div class="password">
-            <input type="password" placeholder="Password" autofocus id="pass" name="password"
-            minlength="8" required>
-        </div>
-
-        <div class="sign-in-button">
-            <button>Sign in</button>
-        </div>
-
-        <div class="forgot-email">
-            <a href="">Forgot Email</a>
-        </div>
-
-        <div class="forgot-password">
-            <a href="">Forgot Password</a>
-        </div>
-
-    </div>
-    </div>
-    <script>"index.js"</script>
+    <div id="root"></div>
+    <script src="index.js"></script>
 </body>
 
 
