Add icon and fix summary page.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <!-- Font Awesome Library CDN Connection -->
     <script src="https://use.fontawesome.com/9a77ea3aef.js"></script>
+    <link rel="shortcut icon" href="img/android-chrome-192x192.png">
 
     <link rel="stylesheet" href="./style.css">
 
